--- a/commander.html
+++ b/commander.html
@@ -4,7 +4,7 @@
   <link rel="manifest" href="data:application/manifest+json,%7B%22name%22%3A%22Parade+TMS%22%2C%22short_name%22%3A%22Parade+TMS%22%2C%22display%22%3A%22standalone%22%2C%22background_color%22%3A%22%230a0e1a%22%2C%22theme_color%22%3A%22%2300e5ff%22%7D">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EOC Commander Dashboard</title>
+<title>OMSYS — Operations Management System</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Barlow+Condensed:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
@@ -74,13 +74,13 @@
   .pc-btn{flex:1;background:rgba(0,229,255,.08);border:1px solid var(--border);color:var(--accent);font-size:9px;font-family:'Share Tech Mono',monospace;padding:4px;cursor:pointer;letter-spacing:1px;transition:all .2s;}
   .pc-btn:hover{background:var(--accent);color:#000;}
   /* MESSAGES */
-  #msg-log{flex:1;overflow-y:auto;padding:6px;display:flex;flex-direction:column;gap:5px;}
-  .msg-item{border:1px solid var(--border);padding:7px 10px;font-size:12px;animation:fadeIn .3s;}
+  #msg-log{flex:1;overflow-y:auto;padding:4px;display:flex;flex-direction:column;gap:3px;}
+  .msg-item{border:1px solid var(--border);padding:4px 8px;font-size:11px;animation:fadeIn .3s;}
   @keyframes fadeIn{from{opacity:0;transform:translateY(3px)}to{opacity:1;transform:none}}
   .msg-item.commander{border-left:3px solid var(--accent2);}
   .msg-item.personnel{border-left:3px solid var(--green);}
   .msg-item.system{border-left:3px solid var(--dim);opacity:.65;}
-  .msg-hdr{display:flex;justify-content:space-between;margin-bottom:3px;}
+  .msg-hdr{display:flex;justify-content:space-between;margin-bottom:1px;}
   .msg-sender{font-weight:700;font-size:11px;color:var(--accent);}
   .msg-time{font-family:'Share Tech Mono',monospace;font-size:10px;color:var(--dim);}
   .msg-photo{margin-top:5px;width:100%;border:1px solid var(--border);cursor:pointer;max-height:110px;object-fit:cover;border-radius:1px;}
@@ -144,6 +144,22 @@
   #jf-idle{display:flex;flex-direction:column;align-items:center;justify-content:center;padding:16px 12px;color:var(--dim);font-family:'Share Tech Mono',monospace;font-size:10px;letter-spacing:1px;text-align:center;gap:6px;}
   #jf-idle .jf-icon{font-size:28px;opacity:0.4;}
   #jf-resize-hint{font-size:7px;color:rgba(0,229,255,.3);font-family:'Share Tech Mono',monospace;text-align:right;padding:1px 4px;flex-shrink:0;letter-spacing:0.5px;pointer-events:none;}
+
+  /* APPROVAL NOTIFICATION PANEL */
+  #approval-panel{display:none;position:fixed;top:60px;right:10px;z-index:9000;width:300px;background:rgba(5,8,16,.97);border:1px solid #ffaa00;box-shadow:0 0 20px rgba(255,170,0,.3);}
+  #approval-panel-hdr{background:rgba(255,170,0,.12);padding:6px 10px;display:flex;align-items:center;justify-content:space-between;border-bottom:1px solid rgba(255,170,0,.3);}
+  #approval-panel-hdr span{font-family:'Share Tech Mono',monospace;font-size:10px;color:#ffaa00;letter-spacing:1px;}
+  #approval-list{max-height:300px;overflow-y:auto;padding:6px;}
+  .ap-item{background:rgba(255,255,255,.04);border:1px solid rgba(255,170,0,.2);padding:7px 9px;margin-bottom:5px;}
+  .ap-name{font-weight:700;font-size:13px;color:#fff;}
+  .ap-detail{font-size:10px;color:var(--dim);margin-top:2px;font-family:'Share Tech Mono',monospace;}
+  .ap-btns{display:flex;gap:5px;margin-top:6px;}
+  .ap-approve{flex:1;background:rgba(0,255,136,.1);border:1px solid #00ff88;color:#00ff88;font-family:'Share Tech Mono',monospace;font-size:9px;padding:4px;cursor:pointer;letter-spacing:1px;transition:all .2s;}
+  .ap-approve:hover{background:#00ff88;color:#000;}
+  .ap-reject{flex:1;background:rgba(255,59,92,.08);border:1px solid #ff3b5c;color:#ff3b5c;font-family:'Share Tech Mono',monospace;font-size:9px;padding:4px;cursor:pointer;letter-spacing:1px;transition:all .2s;}
+  .ap-reject:hover{background:#ff3b5c;color:#fff;}
+  /* Approval badge on header */
+  #approval-badge{display:none;background:#ffaa00;color:#000;font-family:'Share Tech Mono',monospace;font-size:9px;font-weight:bold;padding:1px 6px;border-radius:2px;cursor:pointer;animation:blink 1.5s infinite;}
   
   /* PHOTO MODAL */
   #photo-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.88);z-index:9999;align-items:center;justify-content:center;}
@@ -295,6 +311,7 @@
     <h1 id="hdr-title">Traffic Management <span>// Commander</span></h1>
   </div>
   <div class="hdr-right">
+    <span id="approval-badge" onclick="toggleApprovalPanel()" title="Pending approval requests">⚠ PENDING</span>
     <span><span class="live-dot"></span>LIVE</span>
     <span id="clock">--:--:--</span>
     <span id="online-badge">0 ONLINE</span>
@@ -367,8 +384,7 @@
   <div id="personnel-list"><div class="empty">Waiting for personnel...</div></div>
 
   <div class="panel-hdr">
-    Comms Log
-    <span style="color:var(--dim);font-size:10px;">AUTO-SAVED</span>
+    COMMS LOG
   </div>
   <div id="msg-log"><div class="empty">No messages yet.</div></div>
 
@@ -380,22 +396,15 @@
     </div>
   </div>
 
-  <!-- GOOGLE MEET — one-click launcher -->
-  <div id="jitsi-section">
-    <div id="jitsi-hdr">
-      <span><span class="jitsi-dot" id="jitsi-dot"></span>🎥 VIDEO CALL</span>
-      <span id="jitsi-live-badge" style="font-size:9px;color:var(--dim);">IDLE</span>
-    </div>
-    <div id="jitsi-body">
-      <div class="jitsi-row" style="margin-bottom:3px;">
-        <button class="jbtn green" style="flex:1;padding:6px;" onclick="launchJitsiFloat()">▶ START CALL</button>
-        <button class="jbtn red" onclick="closeJitsiFloat()">END</button>
-      </div>
-      <div id="meet-link-display" style="display:none;font-family:'Share Tech Mono',monospace;font-size:8px;color:#00e5ff;padding:3px 0;word-break:break-all;"></div>
-      <div style="font-size:8px;color:var(--dim);font-family:'Share Tech Mono',monospace;letter-spacing:0.5px;padding:2px 0 2px 0;line-height:1.5;">
-        One click · auto-broadcasts link to all phones
-      </div>
-    </div>
+  <!-- GOOGLE MEET — compact one-line -->
+  <div id="jitsi-section" style="border-top:1px solid var(--border);padding:4px 8px;display:flex;align-items:center;gap:6px;flex-shrink:0;">
+    <span class="jitsi-dot" id="jitsi-dot"></span>
+    <span style="font-family:'Share Tech Mono',monospace;font-size:9px;color:var(--accent);letter-spacing:1px;flex-shrink:0;">🎥 VIDEO</span>
+    <span id="jitsi-live-badge" style="font-size:8px;color:var(--dim);flex-shrink:0;">IDLE</span>
+    <div style="flex:1;"></div>
+    <button class="jbtn green" style="padding:3px 10px;font-size:9px;" onclick="launchJitsiFloat()">▶ START</button>
+    <button class="jbtn red" style="padding:3px 8px;font-size:9px;" onclick="closeJitsiFloat()">END</button>
+    <div id="meet-link-display" style="display:none;"></div>
   </div>
 
   <!-- GOOGLE MEET FLOATING STATUS PANEL -->
@@ -497,6 +506,8 @@ function init(){
   startClock();
   fetchUpdates();
   setInterval(fetchUpdates, REFRESH);
+  fetchPendingApprovals();
+  setInterval(fetchPendingApprovals, 8000);
   // Pull fresh settings from Sheet every 30s so admin changes reflect
   refreshConfigFromSheet();
   setInterval(refreshConfigFromSheet, 30000);
@@ -876,15 +887,23 @@ function renderPersonnelList(){
     const card = document.createElement('div');
     card.className=`p-card ${p.online?'online':''} ${selectedTarget===p.id?'selected':''}`;
     card.style.borderLeftColor = p.online ? color : 'var(--dim)';
+    card.onclick = function(){
+      const acts = document.getElementById('pca-'+p.id);
+      if(acts) acts.style.display = acts.style.display==='none' ? 'flex' : 'none';
+    };
     card.innerHTML=`
-      <div class="pc-name">${p.name}</div>
-      <div class="pc-team" style="color:${color}">${p.team||''}</div>
-      <div class="pc-post">📍 ${p.post||'No post assigned'}</div>
-      <div class="pc-status ${p.online?'on':'off'}">${p.online?'● ONLINE':'○ OFFLINE'}</div>
-      <div class="pc-time">Last seen: ${p.lastSeen||'—'}</div>
-      <div class="pc-actions">
-        <button class="pc-btn" onclick="selectTarget('${p.id}','${p.name}')">MESSAGE</button>
-        <button class="pc-btn" onclick="focusOn('${p.id}')">LOCATE</button>
+      <div style="display:flex;justify-content:space-between;align-items:baseline;">
+        <span class="pc-name">${p.name}</span>
+        <span class="pc-time">${p.lastSeen||'—'}</span>
+      </div>
+      <div style="display:flex;gap:8px;align-items:center;margin-top:1px;">
+        <span class="pc-team" style="color:${color};font-size:10px;">${p.team||''}</span>
+        <span class="pc-post" style="font-size:10px;">· ${p.post||'?'}</span>
+        <span class="pc-status ${p.online?'on':'off'}" style="margin-left:auto;">${p.online?'● ONLINE':'○ OFF'}</span>
+      </div>
+      <div class="pc-actions" id="pca-${p.id}" style="display:none;gap:5px;margin-top:4px;">
+        <button class="pc-btn" onclick="event.stopPropagation();selectTarget('${p.id}','${p.name}')">MESSAGE</button>
+        <button class="pc-btn" onclick="event.stopPropagation();focusOn('${p.id}')">LOCATE</button>
       </div>
     `;
     container.appendChild(card);
@@ -1058,6 +1077,64 @@ function toggleMapMax(){
 init();
 
 // ============================================================
+// ============================================================
+// APPROVAL SYSTEM
+// ============================================================
+let pendingApprovals = {};
+
+function toggleApprovalPanel(){
+  const p = document.getElementById('approval-panel');
+  p.style.display = p.style.display === 'none' ? 'block' : 'none';
+}
+
+async function fetchPendingApprovals(){
+  if(!SHEET_URL) return;
+  try{
+    const r = await fetch(SHEET_URL + '?action=getPending&t=' + Date.now(), {cache:'no-store'});
+    const d = await r.json();
+    if(d.pending){
+      const badge = document.getElementById('approval-badge');
+      const list  = document.getElementById('approval-list');
+      if(d.pending.length > 0){
+        badge.style.display = 'inline-block';
+        badge.textContent = '\u26A0 ' + d.pending.length + ' PENDING';
+        list.innerHTML = '';
+        d.pending.forEach(function(req){
+          const item = document.createElement('div');
+          item.className = 'ap-item';
+          item.innerHTML = '<div class="ap-name">'+req.name+'</div>'+
+            '<div class="ap-detail">'+req.team+' \u00B7 '+req.post+'</div>'+
+            '<div class="ap-detail">Requested: '+req.time+'</div>'+
+            '<div class="ap-btns">'+
+              '<button class="ap-approve" onclick="handleApproval(\'' +req.deviceId+'\',\'approve\',this)">\u2713 APPROVE</button>'+
+              '<button class="ap-reject" onclick="handleApproval(\'' +req.deviceId+'\',\'reject\',this)">\u2715 REJECT</button>'+
+            '</div>';
+          list.appendChild(item);
+        });
+        document.getElementById('approval-panel').style.display = 'block';
+      } else {
+        badge.style.display = 'none';
+        list.innerHTML = '<div style="padding:10px;font-family:\'Share Tech Mono\',monospace;font-size:10px;color:var(--dim);">No pending requests.</div>';
+      }
+    }
+  }catch(e){}
+}
+
+async function handleApproval(deviceId, action, btn){
+  btn.textContent = action==='approve' ? 'APPROVING...' : 'REJECTING...';
+  btn.disabled = true;
+  try{
+    await fetch(SHEET_URL, {
+      method:'POST',
+      body: JSON.stringify({ action: action==='approve' ? 'approveUser' : 'rejectUser', deviceId })
+    });
+    delete pendingApprovals[deviceId];
+    setTimeout(fetchPendingApprovals, 800);
+    const msgBody = action==='approve' ? '\u2705 Login APPROVED by Commander.' : '\u274C Login REJECTED by Commander.';
+    addMessage({sender:'SYSTEM',post:'',body:msgBody,type:'system',time:new Date().toLocaleTimeString('en-US',{hour12:false})});
+  }catch(e){ btn.textContent='ERROR'; }
+}
+
 // GOOGLE MEET — DRAGGABLE FLOATING STATUS PANEL
 // Note: Google Meet blocks iframe embedding by design.
 // This panel opens Meet in a new tab and tracks the session
