--- a/personnel.html
+++ b/personnel.html
@@ -92,7 +92,7 @@
     <span style="font-size:22px;">📱</span>
     <div>
       <div style="font-family:'Share Tech Mono',monospace;font-size:11px;color:#00e5ff;letter-spacing:1px;">ADD TO HOME SCREEN</div>
-      <div style="font-size:12px;color:#c8d8e8;">Install OMSYS for faster access</div>
+      <div style="font-size:12px;color:#c8d8e8;">Install OPM for faster access</div>
     </div>
   </div>
   <button onclick="installApp()" style="background:#00e5ff;border:none;color:#000;font-family:'Share Tech Mono',monospace;font-size:11px;font-weight:bold;padding:8px 16px;cursor:pointer;letter-spacing:1px;white-space:nowrap;">INSTALL</button>
@@ -102,8 +102,8 @@
 <div id="login-screen">
   <div class="app-logo">
     <div style="font-family:'Share Tech Mono',monospace;font-size:11px;color:#00e5ff;opacity:0.75;letter-spacing:3px;margin-bottom:4px;">-=pagong=-</div>
-    <div class="badge">OMSYS</div>
-    <h1>Operations Management</h1>
+    <div class="badge">OPM</div>
+    <h1>Operations Personnel Monitor</h1>
     <p>Personnel Check-In</p>
   </div>
   <div class="event-name-display" id="event-name-disp"></div>
@@ -613,7 +613,7 @@ init();
       </div>
     </div>
     <div style="font-size:9px;color:#1e3a5f;font-family:'Share Tech Mono',monospace;text-align:right;">
-      © 2025 ALL RIGHTS RESERVED<br/>OMSYS · EOC SYSTEM
+      © 2026 ALL RIGHTS RESERVED<br/>OPM · EOC SYSTEM
     </div>
   </div>
 
